--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Json DB server",
   "main": "index.js",
   "scripts": {
-    "json:server": "json-server --watch db.json --port 3004"
+    "json:server": "json-server --watch db.json"
   },
   "author": "Ali",
   "license": "ISC",
