--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "jsonserver",
   "version": "1.0.0",
   "description": "Json DB server",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "json-server --watch db.json"
+    "start": "node server.js"
   },
   "author": "Ali",
   "license": "ISC",
